tests/baselines/reference/aliasesInSystemModule1.errors.txt
tests/cases/compiler/aliasesInSystemModule1.ts(1,24): error TS2792: Cannot find module 'foo'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?


==== tests/cases/compiler/aliasesInSystemModule1.ts (1 errors) ====
    import alias = require('foo');
                           ~~~~~
!!! error TS2792: Cannot find module 'foo'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
    import cls = alias.Class;
    export import cls2 = alias.Class;
    
    let x = new alias.Class();
    let y = new cls();
    let z = new cls2();
    
    module M {
      export import cls = alias.Class;
      let x = new alias.Class();
      let y = new cls(); 
      let z = new cls2();
    }
      